[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "tle-db"
authors = [{ name = "Jonathan Olsten", email = "jonathan.olsten@gmail.com" }]
description = " A (Local) Database for Space Command TLEs"
readme = "README.md"
requires-python = ">=3.8"
keywords = []
license = { text = "MIT" }
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "pydantic>=2.0",
    "sqlmodel",
    "sqlalchemy>=2.0"
]
dynamic = ["version"]

[project.optional-dependencies]
dev = [
    "setuptools",
    "setuptools-scm",
    "build",
    "wheel",
    "pytest",
    "pytest-cov",
]

[tool.setuptools.packages.find]
where = ["src"]  # list of folders that contain the packages (["."] by default)
include = ["tledb"]

[tool.setuptools_scm]
parentdir_prefix_version = "tle-db-"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "--cov=build_measurand --cov-report html"
testpaths = ["tests"]
